[package]
name = "tarsius-kernel"
version = "0.0.1"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 3
lto = true

[dependencies]
bootloader = "0.9"
x86_64 = "0.14.10"
pic8259 = "0.10.4"
spin = "0.9.8"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
pc-keyboard = "0.5.1"